# apconf

./: .gitignore  LICENSE.txt  Makefile  README.md  install_go.sh
.github/workflows/: ci-cd.yml
go/: .golangci.yml  go.mk  go.mod  go_install.sh
go/apconf/: apconf.go  apconf_test.go  dict_diff_test.go  logging.go  preprocess_config.go  process_yaml.go  test_dict_diff.go  util.go  zaplogger.go
py/: .pylintrc  poetry.mk  pyproject.toml
py/src/apconf/: apconf.py  cc_plugins.py  preprocess_config.py  process_yaml.py  util.py
py/src/scripts/: sample_main.py
py/test/: test_config.py  test_dict_diff.py
test_config/crawl/: crawl.yaml
test_config/logging/: logging.yaml
test_config/logging-zap-go/: zap_logging.yaml
